# direvo

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  STYLE_GUIDE.md  debug.md  pyproject.toml  walkthrough.json
.github/workflows/: ci.yml  container-validation.yml
docker/: entrypoint.sh
docs/: naming.md
docs/plans/: direvo-distribution.md  docker-generalization.md  docker-validation.md  eden-microservices-refactor.md  function-fitting-demo.md  observability-progress-summary.md  permissions-refactor.md  planner-agent-docs.md  planner-kit-extraction.md  planner-kit-generalization.md  v0.md  web-ui-observability.md
docs/prds/: v0.md
example/data-fitting/: Dockerfile  README.md  auth-setup.sh  eval.py  generate_data.py  plan.py  run.sh  test.npz  train.npz
example/data-fitting/.direvo/: config.yaml
example/data-fitting/.eden/: config.yaml
example/data-fitting/planner/: AGENTS.md  plan.py  planner-prompt.md
example/data-fitting/planner/.agents/skills/: navigate-workspace.md  query-trial-results.md  read-trial-artifacts.md  write-proposal.md
example/data-fitting/planner/workspace/: AGENTS.md  model.py
scripts/: run_docker_integration.sh  run_privileged_validation.sh
src/direvo/: __init__.py  cli.py  config.py  db.py  execution.py  git_manager.py  logging.py  models.py  orchestrator.py  planner.py  runtime.py  summary.py  termination.py  worktree.py
src/direvo/sql/: __init__.py  proposals.sql
src/eden/: bootstrap.py  cleanup.py  cli.py  config.py  db.py  docker_runner.py  execution.py  git_manager.py  grants.py  init.py  logging.py  models.py  orchestrator.py  planner.py  planner_kit.py  runtime.py  summary.py  worktree.py
src/eden/docker/: __init__.py  auth-setup.sh  entrypoint.sh  export.sh
src/eden/sql/: results.sql
src/eden/templates/: config.yaml  eval.py  implement.py  plan.py
src/eden/templates/planner/: AGENTS.md  plan.py
src/eden/templates/planner/.agents/skills/: navigate-workspace.md  query-proposals.md  query-trial-results.md  read-trial-artifacts.md
src/eden/web/: __init__.py  server.py
tests/: test_bootstrap.py  test_claude_auth_repro.py  test_cli.py  test_config.py  test_data_fitting_demo.py  test_db.py  test_docker_config.py  test_docker_integration.py  test_docker_lifecycle.py  test_docker_runner.py  test_e2e.py  test_entrypoint.py  test_execution.py  test_git_manager.py  test_init.py  test_logging.py  test_orchestrator.py  test_permission_boundary.py  test_planner.py  test_planner_kit.py  test_runtime.py  test_smoke.py  test_summary.py  test_termination.py  test_web_server.py  test_worktree.py
tests/fixtures/experiment/: eval.py  execute.py  implement.py  plan.py
tests/fixtures/experiment/.direvo/: config.yaml
tests/fixtures/experiment/planner/: plan.py
