[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "direvo"
version = "0.1.0"
description = "EDEN orchestration engine for directed code evolution"
readme = "docs/plans/v0.md"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "numpy>=1.24",
  "pyright>=1.1",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
eden = "eden.cli:main"
direvo = "eden.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eden = ["sql/*.sql", "docker/*.sh", "templates/**/*", "templates/**/.*", "templates/**/.agents/**/*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "D", "E", "F", "I", "PT", "SIM", "UP"]
ignore = ["D100", "D105", "D107", "SIM108"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["D"]
"src/eden/templates/**/*.py" = ["D", "F841"]

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingTypeStubs = "none"
