[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "direvo"
version = "0.1.0"
description = "EDEN orchestration engine for directed code evolution"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
keywords = ["directed-evolution", "orchestration", "ai", "research-automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "PyYAML>=6.0",
]

[project.urls]
Homepage = "https://github.com/direvo/eden"
Repository = "https://github.com/direvo/eden"
Issues = "https://github.com/direvo/eden/issues"

[project.optional-dependencies]
web = [
  "starlette>=0.40",
  "uvicorn[standard]>=0.30",
]
dev = [
  "direvo[web]",
  "httpx>=0.27",
  "numpy>=1.24",
  "pyright>=1.1",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.scripts]
eden = "eden.cli:main"
direvo = "eden.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
eden = ["sql/*.sql", "docker/*.sh", "templates/**/*", "templates/**/.*", "templates/**/.agents/**/*", "web/static/**/*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["A", "B", "D", "E", "F", "I", "PT", "SIM", "UP"]
ignore = ["D100", "D105", "D107", "SIM108"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["D"]
"src/eden/templates/**/*.py" = ["D", "F841"]

[tool.pyright]
typeCheckingMode = "standard"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingTypeStubs = "none"
